@@ -50,11 +50,16 @@
   ;; the screen dimensions. E.g. moving to the left moves all windows one
   ;; screen-width to the right. 
 
-  (defvar viewport-dimensions '(1 . 1)
-    "Size of each virtual workspace.")
+(defcustom viewport-dimensions '(1 . 1)
+  "Number of columns and rows in each virtual workspace: \\w"
+  :group workspace
+  :type (pair (number 1) (number 1))
+  :after-set (lambda () (viewport-size-changed)))
 
-  (defvar uniconify-to-current-viewport t
-    "Windows uniconify to the current viewport.")
+  (defcustom uniconify-to-current-viewport t
+    "Windows uniconify to the current viewport."
+    :type boolean
+    :group min-max)                     ; iconify)
   
   (defcustom scroll-viewport-steps 5
     "Number of steps in which to scroll between viewports (less steps = faster scrolling)."
