@@ -2,6 +2,10 @@
 	* lisp/sawfish/wm/viewport.jl: Scroll viewport patch by Fernando
 	Carmona Varo (script by Andreas Bombe). It adds an option for
 	switching viewports by moving a number of steps.
+	* lisp/sawfish/wm/util/compat.jl
+	* lisp/sawfish/wm/viewport.jl: Re-expose viewport-dimensions by
+	Christopher Bratusek. Options for viewport-dimensions and the
+	uniconify-to-current-viewport are now in sawfish-ui configurator.
 
 
 2008-08-29  Janek Kozicki <cosurgi@gmail.com>
